--- a/img/dk/templates/1.html
+++ b/img/dk/templates/1.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="{%static 'css/style.css' %}">
     </head>
     <body>
-        <h1>Hello choduo</h1>
+        <h1>Hello</h1>
         <a href="ime/">DK</a>
     </body>
 </html>
