--- a/img/dk/templates/2.html
+++ b/img/dk/templates/2.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="{%static 'css/style.css' %}">
     </head>
     <body>
-        <h1>Hello landfakir</h1>
+        <h1>Hello</h1>
         <img src="{%static 'img/Mercedes.jpg' %}">
     </body>
 </html>
